Minor bug fixes, replacing Sofia's SNR with a real flux and improved treatment of smaller galaxies

--- a/FAT_INPUT.config
+++ b/FAT_INPUT.config
@@ -30,7 +30,7 @@ new_output=y
 new_log=y
 #Optimal number of pixels per maj axis beam
 opt_pixelbeam=4
-#Hanning smoothed or not (y=1, n=0)
+#Hanning smoothed or not (y=1, n=0 Default=1)
 velocity_resolution=1
-# How much output do you want 0.= all possible output (This is a lot) 1= all steps model + maps +def files 2 = Final model + maps + def files for steps + logs, 3 = Only final model def + logs Default = 2
+# How much output do you want 0.= all possible output (This is a lot) 1= all steps model + maps +def files 2 = Final model + maps + def files for steps + logs, 3 = Only final model def + logs 4=almost all output >5=all possible output (This is a lot)  Default = 2
 maps_output = 2
