--- a/FAT_INPUT.config
+++ b/FAT_INPUT.config
@@ -4,8 +4,12 @@ startgalaxy=0
 #the last galaxy to be fitted	
 #if set to -1 the whole catalogue will be fitted
 endgalaxy=-1
-#Remove all previous pre-processing as cutting the cube 0 no 1 yes 2 use provided preprocessing from Sofia
-allnew=0
+#Remove all previous pre-processing as cutting the cube
+#-1=start from orginal cube
+# 0=use all existing pre-processed data (i.e start from _small_opt if possible)
+# 1= start from header and blank adjusted cube (i.e _preprocessed) (default)
+# 2 use provided preprocessing from Sofia
+allnew=1
 #Parameters for finishing the fitting process early
 #If set to one the program finishes after this loop, if set to 0 only pre-processing will occur
 finishafter=2
@@ -20,9 +24,6 @@ outputlog=Logfileforthepergalaxyfit.txt
 #trigger for creating new output
 #results file 'y' or append the old one 'n'
 new_output=y
-#trigger for creating a new output
-#log file 'y' or append the old one 'n'
-new_log=y
 #Optimal number of pixels per maj axis beam
 opt_pixelbeam=4
 #Hanning smoothed or not (y=1, n=0 Default=1)
