Numerous bug fixes, Better handling of sources with central continuum source

--- a/FAT_INPUT.config
+++ b/FAT_INPUT.config
@@ -30,3 +30,5 @@ opt_pixelbeam=4
 velocity_resolution=1
 # How much output you would like to maintain for each galaxy. 0 just organize the output and keep all (This will also happen when a fit is unsuccesful, this can be a lot of files); 1 remove optimized files, log files and input files; 2  remove optimized files, log files, input files, ps files and unsmoothed files; 3 (Default) remove optimized files, log files, input files, ps files, unsmoothed files and all model fits files except the final model; 4 keep only the def files and remove all other output. 5 indicates a failed fit clean up. >6 is the same as 0. Residuals are created for all cases where the fits files are maintained.
 maps_output = 3
+#If you want FAT to output a warp radius, tiltograms and warp radius set warp_output = 1
+warp_output=0
