Option to fix the pa or incl regardless of whether it is a large galaxy

--- a/FAT_INPUT.config
+++ b/FAT_INPUT.config
@@ -13,6 +13,8 @@ allnew=1
 #Parameters for finishing the fitting process early
 #If set to one the program finishes after this loop, if set to 0 only pre-processing will occur
 finishafter=2
+# The size of the rings in number of beams
+ring_size = 1.1
 #Input catalogue for the pipeline
 catalogue=FAT_Input_Catalogue.txt
 #Directory with all the directories of the galaxies to be fitted
